[package]
name = "dioxus-websocket-hooks"
version = "0.0.2"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/FruitieX/dioxus-websocket-hooks"
description = "Dioxus hooks for websocket connections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "c97f431"}
wasm-bindgen = "0.2.78"
serde = { version = "1.0" }
serde_json = "1.0"
web-sys = { version = "0.3.44", features = ['console'] }
wasm-sockets = "1.0.0"

[dev-dependencies]
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "c97f431" }
fermi = { git = "https://github.com/DioxusLabs/dioxus", rev = "c97f431" }
